--- a/src/components/DetailDuAn/ViTri/style.css
+++ b/src/components/DetailDuAn/ViTri/style.css
@@ -161,7 +161,7 @@
   .view-more {
     display: inline-block;
     padding: 8px 16px;
-    background-color: #2563eb;
+    background-color: #224B6F;
     color: #ffffff;
     font-size: 1rem;
     font-weight: 600;
