--- a/src/components/DetailPhanKhu/PhanKhuA/style.css
+++ b/src/components/DetailPhanKhu/PhanKhuA/style.css
@@ -29,7 +29,7 @@
  
   .phanKhuA-button {
     width: 100%; /* chiếm tràn ngang */
-    background-color: #f47f29;
+    background-color: #224B6F;
     display: flex;
     align-items: center;
     justify-content: center; /* căn giữa chữ */
