--- a/src/components/DetailSanPham/MenuSanPham/style.css
+++ b/src/components/DetailSanPham/MenuSanPham/style.css
@@ -8,7 +8,7 @@
 
 /* Wrapper */
 .sanpham-wrapper {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: -100px auto 0 auto; 
   padding: 20px;
 }
@@ -24,6 +24,7 @@
 /* Card */
 .sanpham-card {
   width: calc(25% - 12px);
+  height: 328px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
@@ -43,6 +44,7 @@
 .sanpham-slides {
   display: flex;
   transition: transform 0.5s ease-in-out;
+  height: 180px;
 }
 
 .sanpham-slide {
